# ChangeLog for media-video/nvidia-settings
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.81 2010/03/25 20:57:03 peper Exp $

*nvidia-settings-195.36.15 (25 Mar 2010)

  25 Mar 2010; Piotr Jaroszyński <peper@gentoo.org>
  -nvidia-settings-195.36.03.ebuild, +nvidia-settings-195.36.15.ebuild:
  Add 195.36.15.

*nvidia-settings-195.36.03 (08 Feb 2010)
*nvidia-settings-195.30 (08 Feb 2010)

  08 Feb 2010; Michał Januszewski <spock@gentoo.org>
  +nvidia-settings-195.30.ebuild, +nvidia-settings-195.36.03.ebuild:
  Version bump.

*nvidia-settings-190.53 (16 Dec 2009)

  16 Dec 2009; Piotr Jaroszyński <peper@gentoo.org>
  +nvidia-settings-190.53.ebuild,
  +files/nvidia-settings-190.53-xf86vidmodeproto.patch:
  Add 190.53.

  01 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  files/nvidia-settings-190.42-xf86vidmodeproto.patch:
  Update NvCtrlAttributesVidMode patch from bug #291563 by Adrian Ilarion
  Ciobanu.

  01 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  nvidia-settings-190.42.ebuild,
  +files/nvidia-settings-190.42-xf86vidmodeproto.patch:
  Missing X11/extensions/xf86vmproto.h include from xf86vidmodeproto to
  compile with libXxf86vm >= 1.1.0.

*nvidia-settings-185.18.36 (22 Oct 2009)

  22 Oct 2009; Piotr Jaroszyński <peper@gentoo.org>
  +nvidia-settings-185.18.36.ebuild:
  Add 185.18.36.

*nvidia-settings-190.42 (22 Oct 2009)

  22 Oct 2009; Piotr Jaroszyński <peper@gentoo.org>
  +nvidia-settings-190.42.ebuild:
  Add 190.42.

*nvidia-settings-190.40 (17 Oct 2009)

  17 Oct 2009; Piotr Jaroszyński <peper@gentoo.org>
  +nvidia-settings-190.40.ebuild:
  Add 190.40.

*nvidia-settings-190.36 (27 Sep 2009)

  27 Sep 2009; Piotr Jaroszyński <peper@gentoo.org>
  +nvidia-settings-190.36.ebuild:
  Add 190.36.

*nvidia-settings-190.32 (21 Sep 2009)

  21 Sep 2009; Alex Alexander <wired@gentoo.org>
  +nvidia-settings-190.32.ebuild:
  version bump, beta 190.32
