@@ -1,6 +1,12 @@
 # ChangeLog for media-video/nvidia-settings
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.81 2010/03/25 20:57:03 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.82 2010/04/29 07:03:48 jlec Exp $
+
+*nvidia-settings-195.36.24 (29 Apr 2010)
+
+  29 Apr 2010; Justin Lecher <jlec@gentoo.org>
+  +nvidia-settings-195.36.24.ebuild:
+  Version Bump, on permission of #315141, requested by wired on IRC
 
 *nvidia-settings-195.36.15 (25 Mar 2010)
 
